# EstudosVisaoComp

./: README.md
API WebCam  HSV Segmentation Opencv/: README.md  camera.py  main.py
AWS Rekognition/: README.md
Angulos/: README.md  angulos.py
Areas/: README.md  areas.py
Automatic_Rot_Image_Text/: README.md  main.py  requirements.txt
Cartoon Image/: README.md  cartoonImage.py  webCam_cartoonImage.py
Classificacao de Numeros/: Processamento_img.py  README.md  Train_mnist_keras.py  predict_img.py
Click Mouse Point Pespetive/: README.md  main.py
Color Segmetation/: ColorSegmentationWebcam.py  README.md  SimpleColorSegmetation.ipynb  SimpleColorSegmetation.py  SimpleSegmentationColor2.ipynb
CompareHist/: Resultado_compareHist.csv  calc_Hist.py
Connected_components/: README.md  conta_elem.py  dev_aula.py
Data Augmentation/: README.md  dataAug.py
Desafio CERTI/: Contando_moedas_de_Real.py  contando_moedas_de_dolar.py  main.py  pyproject.toml  requirements.txt
Desafio-Mvisia/: Desafio MVisia-checkpoint.ipynb  Dseafio_Mvisia.py  README.md
Edge Detection/: README.md  edgeDetection.py
Esteganografia/: readme.md  steg_v4.py
Estimar Freq Cardiaca/: README.md  app_heart_ratio.py  heart_ratio.py  requirements.txt
Estudos mediapipe/: FingerCountingProject.py  HandTrackingModule.py  recognize_handas.py  volumeControl.py
Estudos_C++/: README.md  project_1.cpp  project_2.cpp  project_3.cpp  project_4.cpp  project_5.cpp  project_6.cpp  project_7.cpp  project_8.cpp  (+1 more)
k_means_histologia/: .gitignore  README.md  kmeans_histology.py  pyproject.toml
(+127 files in other folders)
