[project]
name = "cap16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
